--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@ statusImages:{
 });
 </script>
 
+
+<!-- User 1 -->
+
 <div class="user1">
 <table class="contact" extension="103" serial="absys-cloud-sk" bgcolor="#FBFBFB" border="0" cellspacing="5" cellpadding="0">
 <tbody><tr>
@@ -111,6 +114,8 @@ statusImages:{
 <tr><td class="call" align="center"><a href="javascript:void(0)"><img src="images/contactme.png" alt="kite-chat" width="100"></a></td>
 </tr>
 </tbody></table>
+
+<!-- User 2 -->
 
 <div class="user1">
 <table class="contact" extension="108" serial="absys-cloud-sk" bgcolor="#FBFBFB" border="0" cellspacing="5" cellpadding="0">
@@ -132,6 +137,7 @@ statusImages:{
 </tr>
 </tbody></table>
 
+<!-- User 3 -->
 
 </div><div class="user1">
 <table class="contact" extension="106" serial="absys-cloud-sk" bgcolor="#FBFBFB" border="0" cellspacing="5" cellpadding="0">
@@ -153,6 +159,7 @@ statusImages:{
 </tr>
 </tbody></table>
 
+<!-- User 4 -->
 
 </div><div class="user1">
 <table class="contact" extension="105" serial="absys-cloud-sk" bgcolor="#FBFBFB" border="0" cellspacing="5" cellpadding="0">
@@ -174,6 +181,7 @@ statusImages:{
 </tr>
 </tbody></table>
 
+<!-- User 5 -->
 
 </div><div class="user1">
 <table class="contact" extension="104" serial="absys-cloud-sk" bgcolor="#FBFBFB" border="0" cellspacing="5" cellpadding="0">
