--- a/index.html
+++ b/index.html
@@ -159,26 +159,28 @@ statusImages:{
 </tr>
 </tbody></table>
 
-<!-- User 4 -->
+<!-- User 5 -->
 
 </div><div class="user1">
-<table class="contact" extension="105" serial="absys-cloud-sk" bgcolor="#FBFBFB" border="0" cellspacing="5" cellpadding="0">
+<table class="contact" extension="104" serial="absys-cloud-sk" bgcolor="#FBFBFB" border="0" cellspacing="5" cellpadding="0">
 <tbody><tr>
 <td>
 <p align="center">
-<span class="full-name">Jason Lowenberg </span><br><span class="job-title">Sales</span></p>
+<span class="full-name">Jordan Wood </span><br><span class="job-title">Sales</span></p>
 </td>
 </tr>
 <tr>
 <td class="avatar" align="center">
-<a href="javascript:void(0)"><img src="https://kite.wildix.com/absys-cloud-sk/105/api/avatar" alt="avatar" align="middle" width="100"></a>
+<a href="javascript:void(0)"><img src="https://kite.wildix.com/absys-cloud-sk/104/api/avatar" alt="avatar" align="middle" width="100"></a>
 </td>
 </tr>
 <tr>
- <td align="center"><img src="./images/presence/offline.jpg" class="presence" align="middle"></td>
+ <td align="center"><img src="./images/presence/online-1.jpg" class="presence" align="middle"></td>
 </tr>
 <tr><td class="call" align="center"><a href="javascript:void(0)"><img src="images/contactme.png" alt="kite-chat" width="100"></a></td>
 </tr>
 </tbody></table>
+</div>
+</div>
 
 </body></html>
