--- a/index.html
+++ b/index.html
@@ -137,6 +137,27 @@ statusImages:{
 </tr>
 </tbody></table>
 
+<!-- User 3 -->
+
+</div><div class="user1">
+<table class="contact" extension="107" serial="absys-cloud-sk" bgcolor="#FBFBFB" border="0" cellspacing="5" cellpadding="0">
+<tbody><tr>
+<td>
+<p align="center">
+<span class="full-name">Dave Lopes </span><br><span class="job-title">Service </span></p>
+</td>
+</tr>
+<tr>
+<td class="avatar" align="center">
+<a href="javascript:void(0)"><img src="https://kite.wildix.com/absys-cloud-sk/107/api/avatar" alt="avatar" align="middle" width="100"></a>
+</td>
+</tr>
+<tr>
+ <td align="center"><img src="./images/presence/online-1.jpg" class="presence" align="middle"></td>
+</tr>
+<tr><td class="call" align="center"><a href="javascript:void(0)"><img src="images/contactme.png" alt="kite-chat" width="100"></a></td>
+</tr>
+</tbody></table>
 
 </div>
 </div>
