Updated title to Sales

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ statusImages:{
 <tbody><tr>
 <td>
 <p align="center">
-<span class="full-name">Mike Burnett </span><br><span class="job-title">Service </span></p>
+<span class="full-name">Mike Burnett </span><br><span class="job-title">Sales </span></p>
 </td>
 </tr>
 <tr>
