--- a/index.html
+++ b/index.html
@@ -96,16 +96,16 @@ statusImages:{
 <!-- User 1 -->
 
 <div class="user1">
-<table class="contact" extension="103" serial="absys-cloud-sk" bgcolor="#FBFBFB" border="0" cellspacing="5" cellpadding="0">
+<table class="contact" extension="101" serial="absys-cloud-sk" bgcolor="#FBFBFB" border="0" cellspacing="5" cellpadding="0">
 <tbody><tr>
 <td>
 <p align="center">
-<span class="full-name">Andrew Johnston </span><br><span class="job-title">Service</span></p>
+<span class="full-name">Ron Krewench </span><br><span class="job-title">Sales</span></p>
 </td>
 </tr>
 <tr>
 <td class="avatar" align="center">
-<a href="javascript:void(0)"><img src="https://kite.wildix.com/absys-cloud-sk/103/api/avatar" alt="avatar" align="middle" width="100"></a>
+<a href="javascript:void(0)"><img src="https://kite.wildix.com/absys-cloud-sk/101/api/avatar" alt="avatar" align="middle" width="100"></a>
 </td>
 </tr>
 <tr>
@@ -118,11 +118,33 @@ statusImages:{
 <!-- User 2 -->
 
 </div><div class="user1">
+<table class="contact" extension="102" serial="absys-cloud-sk" bgcolor="#FBFBFB" border="0" cellspacing="5" cellpadding="0">
+<tbody><tr>
+<td>
+<p align="center">
+<span class="full-name">Jennifer Kanaan </span><br><span class="job-title">Sales</span></p>
+</td>
+</tr>
+<tr>
+<td class="avatar" align="center">
+<a href="javascript:void(0)"><img src="https://kite.wildix.com/absys-cloud-sk/102/api/avatar" alt="avatar" align="middle" width="100"></a>
+</td>
+</tr>
+<tr>
+ <td align="center"><img src="./images/presence/online-1.jpg" class="presence" align="middle"></td>
+</tr>
+<tr><td class="call" align="center"><a href="javascript:void(0)"><img src="images/contactme.png" alt="kite-chat" width="100"></a></td>
+</tr>
+</tbody></table>
+
+<!-- User 3 -->
+
+</div><div class="user1">
 <table class="contact" extension="104" serial="absys-cloud-sk" bgcolor="#FBFBFB" border="0" cellspacing="5" cellpadding="0">
 <tbody><tr>
 <td>
 <p align="center">
-<span class="full-name">Jordan Wood </span><br><span class="job-title">Sales</span></p>
+<span class="full-name">Jordan Wood </span><br><span class="job-title">Sales </span></p>
 </td>
 </tr>
 <tr>
@@ -137,19 +159,19 @@ statusImages:{
 </tr>
 </tbody></table>
 
-<!-- User 3 -->
+<!-- User 4 -->
 
 </div><div class="user1">
-<table class="contact" extension="107" serial="absys-cloud-sk" bgcolor="#FBFBFB" border="0" cellspacing="5" cellpadding="0">
+<table class="contact" extension="109" serial="absys-cloud-sk" bgcolor="#FBFBFB" border="0" cellspacing="5" cellpadding="0">
 <tbody><tr>
 <td>
 <p align="center">
-<span class="full-name">Dave Lopes </span><br><span class="job-title">Service </span></p>
+<span class="full-name">Glynnis Wolch </span><br><span class="job-title">Sales </span></p>
 </td>
 </tr>
 <tr>
 <td class="avatar" align="center">
-<a href="javascript:void(0)"><img src="https://kite.wildix.com/absys-cloud-sk/107/api/avatar" alt="avatar" align="middle" width="100"></a>
+<a href="javascript:void(0)"><img src="https://kite.wildix.com/absys-cloud-sk/109/api/avatar" alt="avatar" align="middle" width="100"></a>
 </td>
 </tr>
 <tr>
@@ -159,19 +181,41 @@ statusImages:{
 </tr>
 </tbody></table>
 
-<!-- User 4 -->
+<!-- User 5 -->
 
 </div><div class="user1">
-<table class="contact" extension="106" serial="absys-cloud-sk" bgcolor="#FBFBFB" border="0" cellspacing="5" cellpadding="0">
+<table class="contact" extension="110" serial="absys-cloud-sk" bgcolor="#FBFBFB" border="0" cellspacing="5" cellpadding="0">
 <tbody><tr>
 <td>
 <p align="center">
-<span class="full-name">Mike Burnett </span><br><span class="job-title">Sales </span></p>
+<span class="full-name">Pauline Whistance-Smith </span><br><span class="job-title">Sales </span></p>
 </td>
 </tr>
 <tr>
 <td class="avatar" align="center">
-<a href="javascript:void(0)"><img src="https://kite.wildix.com/absys-cloud-sk/106/api/avatar" alt="avatar" align="middle" width="100"></a>
+<a href="javascript:void(0)"><img src="https://kite.wildix.com/absys-cloud-sk/110/api/avatar" alt="avatar" align="middle" width="100"></a>
+</td>
+</tr>
+<tr>
+ <td align="center"><img src="./images/presence/online-1.jpg" class="presence" align="middle"></td>
+</tr>
+<tr><td class="call" align="center"><a href="javascript:void(0)"><img src="images/contactme.png" alt="kite-chat" width="100"></a></td>
+</tr>
+</tbody></table>
+
+<!-- User 6 -->
+
+</div><div class="user1">
+<table class="contact" extension="111" serial="absys-cloud-sk" bgcolor="#FBFBFB" border="0" cellspacing="5" cellpadding="0">
+<tbody><tr>
+<td>
+<p align="center">
+<span class="full-name">Philip Fynbo </span><br><span class="job-title">Sales </span></p>
+</td>
+</tr>
+<tr>
+<td class="avatar" align="center">
+<a href="javascript:void(0)"><img src="https://kite.wildix.com/absys-cloud-sk/111/api/avatar" alt="avatar" align="middle" width="100"></a>
 </td>
 </tr>
 <tr>
