--- a/index.html
+++ b/index.html
@@ -188,9 +188,9 @@ statusImages:{
 <tbody><tr>
 <td>
 <p align="center">
-<span class="full-name">Pauline </span><br><span class="job-title">Sales </span></p>
+<span class="full-name">Pauline </span><br></p>
 <p align="center">
-<span class="full-name">Whistance-Smith </span><br></p>
+<span class="full-name">Whistance-Smith </span><br><span class="job-title">Sales </span></p>
 </td>
 </tr>
 <tr>
