--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ statusImages:{
 <tbody><tr>
 <td>
 <p align="center">
-<span class="full-name">Ron Krewench </span><br><span class="job-title">Sales</span></p>
+<span class="full-name">Ron Krewench </span><br><span class="job-title">Workflow Specialist</span></p>
 </td>
 </tr>
 <tr>
@@ -122,7 +122,7 @@ statusImages:{
 <tbody><tr>
 <td>
 <p align="center">
-<span class="full-name">Jennifer Kanaan </span><br><span class="job-title">Sales</span></p>
+<span class="full-name">Jennifer Kanaan </span><br><span class="job-title">Workflow Specialist</span></p>
 </td>
 </tr>
 <tr>
@@ -144,7 +144,7 @@ statusImages:{
 <tbody><tr>
 <td>
 <p align="center">
-<span class="full-name">Jordan Wood </span><br><span class="job-title">Sales </span></p>
+<span class="full-name">Jordan Wood </span><br><span class="job-title">Senior IT Consultant </span></p>
 </td>
 </tr>
 <tr>
@@ -166,7 +166,7 @@ statusImages:{
 <tbody><tr>
 <td>
 <p align="center">
-<span class="full-name">Glynnis Wolch </span><br><span class="job-title">Sales </span></p>
+<span class="full-name">Glynnis Wolch </span><br><span class="job-title">Workflow Specialist </span></p>
 </td>
 </tr>
 <tr>
@@ -190,7 +190,7 @@ statusImages:{
 <p align="center">
 <span class="full-name">Pauline </span><br></p>
 <p align="center">
-<span class="full-name">Whistance-Smith </span><br><span class="job-title">Sales </span></p>
+<span class="full-name">Whistance-Smith </span><br><span class="job-title">Workflow Specialist </span></p>
 </td>
 </tr>
 <tr>
@@ -212,7 +212,7 @@ statusImages:{
 <tbody><tr>
 <td>
 <p align="center">
-<span class="full-name">Philip Fynbo </span><br><span class="job-title">Sales </span></p>
+<span class="full-name">Philip Fynbo </span><br><span class="job-title">Workflow Specialist </span></p>
 </td>
 </tr>
 <tr>
