Minor title change

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ statusImages:{
 <tbody><tr>
 <td>
 <p align="center">
-<span class="full-name">Jordan Wood </span><br><span class="job-title">Senior IT Consultant </span></p>
+<span class="full-name">Jordan Wood </span><br><span class="job-title">Senior I.T. Consultant </span></p>
 </td>
 </tr>
 <tr>
